--- a/Depo/Depo/Presentation/UserStories/Others/PasswordEnterPopup/PasswordEnterPopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PasswordEnterPopup/PasswordEnterPopup.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_7" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -23,17 +23,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="ix6-YO-yfz">
-            <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uQd-mR-j3p">
-                    <rect key="frame" x="30" y="191" width="368" height="554"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uQd-mR-j3p" customClass="IQPreviousNextView" customModule="IQKeyboardManagerSwift">
+                    <rect key="frame" x="12" y="7" width="296" height="554"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7lQ-90-FuU">
-                            <rect key="frame" x="20" y="30" width="328" height="20.333333333333329"/>
+                            <rect key="frame" x="20" y="30" width="256" height="20.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6x-0Z-4Ca">
-                                    <rect key="frame" x="0.0" y="0.0" width="328" height="20.333333333333332"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="256" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -41,21 +41,21 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="264" placeholderIntrinsicHeight="209" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GgI-ax-mYA">
-                            <rect key="frame" x="28" y="70.333333333333314" width="312" height="209"/>
+                            <rect key="frame" x="16" y="70.5" width="264" height="209"/>
                         </stackView>
                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="289" placeholderIntrinsicHeight="164.5" translatesAutoresizingMaskIntoConstraints="NO" id="sXa-dE-8dM" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="26" y="287.33333333333331" width="316" height="164.66666666666669"/>
+                            <rect key="frame" x="16" y="287.5" width="264" height="164.5"/>
                             <color key="backgroundColor" name="primaryBackground"/>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8B5-tU-FFG">
-                            <rect key="frame" x="0.0" y="472" width="368" height="1"/>
+                            <rect key="frame" x="0.0" y="472" width="296" height="1"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="MMA-PH-ald"/>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xM1-yz-AR2">
-                            <rect key="frame" x="16" y="493" width="336" height="31"/>
+                            <rect key="frame" x="16" y="493" width="264" height="31"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Button"/>
                             <connections>
@@ -65,19 +65,19 @@
                     </subviews>
                     <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
-                        <constraint firstItem="GgI-ax-mYA" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="28" id="16a-77-UIv"/>
+                        <constraint firstItem="GgI-ax-mYA" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="16" id="16a-77-UIv"/>
                         <constraint firstAttribute="trailing" secondItem="7lQ-90-FuU" secondAttribute="trailing" constant="20" id="1Ce-Pb-iXi"/>
                         <constraint firstItem="xM1-yz-AR2" firstAttribute="top" secondItem="8B5-tU-FFG" secondAttribute="bottom" constant="20" id="4bg-a4-swx"/>
                         <constraint firstAttribute="bottom" secondItem="xM1-yz-AR2" secondAttribute="bottom" constant="30" id="4cw-rA-2eU"/>
                         <constraint firstAttribute="trailing" secondItem="8B5-tU-FFG" secondAttribute="trailing" id="FHk-bN-8i5"/>
-                        <constraint firstItem="sXa-dE-8dM" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="26" id="Fms-tl-iik"/>
+                        <constraint firstItem="sXa-dE-8dM" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="16" id="Fms-tl-iik"/>
                         <constraint firstItem="GgI-ax-mYA" firstAttribute="top" secondItem="7lQ-90-FuU" secondAttribute="bottom" constant="20" id="FpE-E5-Cyd"/>
-                        <constraint firstAttribute="trailing" secondItem="GgI-ax-mYA" secondAttribute="trailing" constant="28" id="KzP-oV-AIY"/>
+                        <constraint firstAttribute="trailing" secondItem="GgI-ax-mYA" secondAttribute="trailing" constant="16" id="KzP-oV-AIY"/>
                         <constraint firstItem="sXa-dE-8dM" firstAttribute="top" secondItem="GgI-ax-mYA" secondAttribute="bottom" constant="8" id="LB4-9U-d6h"/>
                         <constraint firstItem="7lQ-90-FuU" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="20" id="M1X-mZ-uDN"/>
                         <constraint firstItem="7lQ-90-FuU" firstAttribute="top" secondItem="uQd-mR-j3p" secondAttribute="top" constant="30" id="TM3-eN-gB7"/>
                         <constraint firstItem="8B5-tU-FFG" firstAttribute="top" secondItem="sXa-dE-8dM" secondAttribute="bottom" constant="20" id="V15-Xo-lEC"/>
-                        <constraint firstAttribute="trailing" secondItem="sXa-dE-8dM" secondAttribute="trailing" constant="26" id="a3C-Pw-mVe"/>
+                        <constraint firstAttribute="trailing" secondItem="sXa-dE-8dM" secondAttribute="trailing" constant="16" id="a3C-Pw-mVe"/>
                         <constraint firstItem="xM1-yz-AR2" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="16" id="oMr-dH-Jdr"/>
                         <constraint firstAttribute="trailing" secondItem="xM1-yz-AR2" secondAttribute="trailing" constant="16" id="rpH-RN-1wE"/>
                         <constraint firstItem="8B5-tU-FFG" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" id="t5r-HU-yEF"/>
@@ -98,10 +98,10 @@
             <viewLayoutGuide key="safeArea" id="N5c-6g-D9j"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="uQd-mR-j3p" firstAttribute="leading" secondItem="N5c-6g-D9j" secondAttribute="leading" constant="30" id="0l1-Xz-wXx"/>
+                <constraint firstItem="uQd-mR-j3p" firstAttribute="leading" secondItem="N5c-6g-D9j" secondAttribute="leading" constant="12" id="0l1-Xz-wXx"/>
                 <constraint firstItem="uQd-mR-j3p" firstAttribute="centerY" secondItem="N5c-6g-D9j" secondAttribute="centerY" id="6Jj-ft-XyZ"/>
                 <constraint firstItem="uQd-mR-j3p" firstAttribute="centerX" secondItem="N5c-6g-D9j" secondAttribute="centerX" id="Eut-h7-b6w"/>
-                <constraint firstItem="N5c-6g-D9j" firstAttribute="trailing" secondItem="uQd-mR-j3p" secondAttribute="trailing" constant="30" id="PA7-Xi-sMD"/>
+                <constraint firstItem="N5c-6g-D9j" firstAttribute="trailing" secondItem="uQd-mR-j3p" secondAttribute="trailing" constant="12" id="PA7-Xi-sMD"/>
             </constraints>
             <variation key="widthClass=regular">
                 <mask key="constraints">
